@@ -53,7 +53,7 @@ Controller = Utilities.createClass(
         // Length of subsequent intervals; a value of 0 means use no intervals
         this.intervalSamplingLength = 100;
 
-        this.initialComplexity = 0;
+        this.initialComplexity = 1;
     }, {
 
     set isFrameLengthEstimatorEnabled(enabled) {
@@ -327,8 +327,8 @@ RampController = Utilities.createSubclass(Controller,
         this._tier = -.5;
         // The timestamp is first set after the first interval completes
         this._tierStartTimestamp = 0;
-        this._minimumComplexity = 0;
-        this._maximumComplexity = 0;
+        this._minimumComplexity = 1;
+        this._maximumComplexity = 1;
 
         // After the tier range is determined, figure out the number of ramp iterations
         var minimumRampLength = 2500;
@@ -409,7 +409,7 @@ RampController = Utilities.createSubclass(Controller,
             this._endTimestamp += timestamp;
             this.mark(Strings.json.samplingStartTimeOffset, timestamp);
 
-            this._minimumComplexity = 0;
+            this._minimumComplexity = 1;
             this._possibleMinimumComplexity = this._minimumComplexity;
             this._minimumComplexityEstimator.sample(this._minimumComplexity);
 
@@ -468,7 +468,7 @@ RampController = Utilities.createSubclass(Controller,
         } else if (intervalFrameLengthStandardDeviation > 2) {
             // In the case where we might have found a previous interval where 60fps was reached. We hit a significant blip,
             // so we should resample this area in the next ramp.
-            this._possibleMinimumComplexity = 0;
+            this._possibleMinimumComplexity = 1;
         }
         if (intervalFrameLengthMean - intervalFrameLengthStandardDeviation > this.frameLengthRampLowerThreshold)
             this._possibleMaximumComplexity = Math.min(this._possibleMaximumComplexity, currentComplexity);
@@ -505,7 +505,7 @@ RampController = Utilities.createSubclass(Controller,
         this._rampDidWarmup = false;
         // Start timestamp represents start of ramp iteration and warm up
         this._rampStartTimestamp = timestamp;
-        this._possibleMinimumComplexity = 0;
+        this._possibleMinimumComplexity = 1;
         this._possibleMaximumComplexity = this._maximumComplexity;
     },
 
