@@ -1,5 +1,15 @@
 2016-04-08  Jon Lee  <jonlee@apple.com>
 
+        Have Animometer benchmark always start with complexity of 1
+        https://bugs.webkit.org/show_bug.cgi?id=156432
+
+        Reviewed by Ryosuke Niwa.
+
+        * Animometer/tests/resources/main.js: Update the default Controller and RampController to
+        set its minimum complexities to 1 instead of 0.
+
+2016-04-08  Jon Lee  <jonlee@apple.com>
+
         Fix SVG benchmark test
         https://bugs.webkit.org/show_bug.cgi?id=156410
 
